--- a/index.html
+++ b/index.html
@@ -142,7 +142,34 @@
                 <h1 class="w3-left-align w3-xxxlarge"><i>Projects</i></h1>
                 <hr class="w3-center" style="width:30%;margin-top:0">
             </div>
-            <!-- hfnhmt -->
+            <!-- D-NPC -->
+            <div class="w3-cell-row" style="width:100%;">
+                <div class="w3-container w3-center w3-black w3-cell w3-cell-middle w3-hide-small" style="width:18%;">
+                    <img class="w3-hide-small w3-left w3-padding-32" src="resources/projects/dnpc.png" style="width:100%;">
+                </div>
+                <div class="w3-container w3-padding-16  w3-center w3-black w3-cell w3-cell-top w3-rest">
+                    <p class="w3-xlarge w3-left-align"><b>D-NPC: Dynamic Neural Point Clouds for Non-Rigid View Synthesis from Monocular Video</b></p>
+                    <p class="w3-large w3-left-align w3-text-blue">
+                        <a href="index.html"><b>Moritz Kappel</b></a>,
+                        <a href="https://fhahlbohm.github.io">Florian Hahlbohm</a>,
+                        <a href="https://graphics.tu-bs.de/people/scholz-timon">Timon Scholz</a>,
+                        <a href="https://graphics.tu-bs.de/people/castillo">Susana Castillo</a>,<br>
+                        <a href="https://people.mpi-inf.mpg.de/~theobalt/">Christian Theobalt</a>,
+                        <a href="https://graphics.tu-bs.de/people/eisemann">Martin Eisemann</a>,
+                        <a href="https://people.mpi-inf.mpg.de/~golyanik/">Vladislav Golyanik</a>,
+                        <a href="https://graphics.tu-bs.de/people/magnor">Marcus Magnor</a>
+                    </p>
+                    <p class="w3-large w3-left-align">
+                        arXiv preprint (May 2024)
+                    </p>
+                    <p class="w3-large w3-left-align w3-text-blue">
+                        <a href="https://arxiv.org/abs/2212.01368">[paper]</a>&nbsp
+                        <a href="projects/dnpc/index.html">[project page]</a>&nbsp
+                        <!-- <a href="https://graphics.tu-bs.de/publications/kappel2024d-npc">[project page]</a>&nbsp -->
+                    </p>
+                </div> 
+            </div> 
+            <!-- MoNeRF -->
             <div class="w3-cell-row" style="width:100%;">
                 <div class="w3-container w3-center w3-black w3-cell w3-cell-middle w3-hide-small" style="width:18%;">
                     <img class="w3-hide-small w3-left w3-padding-32" src="resources/projects/monerf.png" style="width:100%;">
@@ -157,10 +184,13 @@
                         <a href="https://graphics.tu-bs.de/people/magnor">Marcus Magnor</a>
                     </p>
                     <p class="w3-large w3-left-align">
-                        arXiv preprint
+                        IEEE Transactions on Visualization and Computer Graphics (TVCG) 2024
                     </p>
                     <p class="w3-large w3-left-align w3-text-blue">
-                        <a href="https://arxiv.org/abs/2212.01368 ">[arXiv]</a>
+                        <a href="https://arxiv.org/abs/2212.01368">[paper]</a>&nbsp
+                        <a href="https://graphics.tu-bs.de/publications/kappel2024fast">[project page]</a>&nbsp
+                        <a href="https://github.com/MoritzKappel/MoNeRF">[code]</a>&nbsp
+                        <a href="https://nextcloud.mpi-klsb.mpg.de/index.php/s/EHtctQJZDWWcfqj">[data]</a>
                     </p>
                 </div> 
             </div> 
