updated dnpc links

--- a/index.html
+++ b/index.html
@@ -163,8 +163,10 @@
                         arXiv preprint (May 2024)
                     </p>
                     <p class="w3-large w3-left-align w3-text-blue">
-                        <a href="https://arxiv.org/abs/2212.01368">[paper]</a>&nbsp
+                        <!-- <a href="">[paper]</a>&nbsp -->
+                        [paper (coming soon)]&nbsp
                         <a href="projects/dnpc/index.html">[project page]</a>&nbsp
+                        [code (coming soon)]
                         <!-- <a href="https://graphics.tu-bs.de/publications/kappel2024d-npc">[project page]</a>&nbsp -->
                     </p>
                 </div> 
