--- a/projects/dnpc/index.html
+++ b/projects/dnpc/index.html
@@ -127,7 +127,7 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1 text-center">
             <video id="v4" width="100%" autoplay loop muted>
-                <source src="assets/interactive_gui.mp4" type="video/mp4"/>
+                <source src="assets/interactive_gui_720p.mp4" type="video/mp4"/>
             </video>
             <p>
                 Interactive live demo captured from our GUI at Full HD resolution.
