added DNPC arXiv link

--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                         <a href="https://graphics.tu-bs.de/people/magnor">Marcus Magnor</a>
                     </p>
                     <p class="w3-large w3-left-align">
-                        arXiv preprint (May 2024)
+                        arXiv preprint (June 2024)
                     </p>
                     <p class="w3-large w3-left-align w3-text-blue">
                         <!-- <a href="">[paper]</a>&nbsp -->
-                        [paper (coming soon)]&nbsp
+                        <a href="https://arxiv.org/abs/2406.10078">[paper]</a>&nbsp
                         <a href="projects/dnpc/index.html">[project page]</a>&nbsp
                         [code (coming soon)]
                         <!-- <a href="https://graphics.tu-bs.de/publications/kappel2024d-npc">[project page]</a>&nbsp -->
