--- a/projects/dnpc/index.html
+++ b/projects/dnpc/index.html
@@ -103,9 +103,9 @@
         <div class="col-md-6 col-md-offset-3 text-center">
             <ul class="nav nav-pills nav-justified nav-fill">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://arxiv.org/">
+                    <a class="nav-link" href="https://arxiv.org/abs/2406.10078">
                         <img src="assets/dnpc_paper_preview.jpg" height="60px" style="border: 1px solid black;">
-                        <h4><strong>Paper<br>(Coming Soon)</strong></h4>
+                        <h4><strong>Paper</strong></h4>
                     </a>
                 </li>
                 <li class="nav-item">
