Updated publications and CV

--- a/projects/dnpc/index.html
+++ b/projects/dnpc/index.html
@@ -55,7 +55,7 @@
             <b>D&ndash;NPC</b>: Dynamic Neural Point Clouds <br> for
             Non-Rigid View Synthesis from Monocular Video<br>
             <small>
-                arXiv
+                Eurographics 2025
             </small>
         </h2>
     </div>
