--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <a href="https://graphics.tu-bs.de/people/magnor">Marcus Magnor</a>
                     </p>
                     <p class="w3-large w3-left-align">
-                        arXiv preprint (June 2024)
+                        Eurographics 2025
                     </p>
                     <p class="w3-large w3-left-align w3-text-blue">
                         <a href="https://arxiv.org/abs/2406.10078">[paper]</a>&nbsp
