--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
                         <p><a href="https://graphics.tu-bs.de/people/kappel"><i class="fa fa-briefcase fa-fw w3-hover-opacity w3-text-white w3-xxlarge w3-margin-right"></i></a> Professional Webpage</p>
                         <p><a href="https://github.com/MoritzKappel"><i class="fa fa-github fa-fw w3-hover-opacity w3-text-white w3-xxlarge w3-margin-right"></i></a> Github: MoritzKappel</p>
                         <p><a href="https://scholar.google.de/citations?user=fQeqf8MAAAAJ"><i class="fa fa-google fa-fw w3-hover-opacity w3-text-white w3-xxlarge w3-margin-right"></i></a> Google Scholar: Moritz Kappel</p>
+                        <p><a href="https://www.linkedin.com/in/moritz-kappel-344567318/"><i class="fa fa fa-linkedin fa-fw w3-hover-opacity w3-text-white w3-xxlarge w3-margin-right"></i></a> LinkedIn: Moritz Kappel</p>
                     </div>
                 </div>
                 <div class="w3-container w3-padding-32 w3-cell-middle w3-cell w3-left-align w3-black w3-half">
