reworked cv and removed phone

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                     </header>
                     <br>
                     <p class="w3-container w3-xlarge w3-text-light-grey w3-left-align w3-padding-16 w3-black">
-                        I am a research scientist and PhD student at the Computer Graphics Lab, TU Braunschweig, Germany.
-                        My research interests include computer graphics and vision techniques for neural rendering as well as scene understanding and reconstruction.
+                        I am a PhD student at the Computer Graphics Lab, TU Braunschweig, Germany.
+                        My research interests include computer graphics, computer vision and machine learning techniques for neural scene reconstruction and rendering.
                     </p>    
                 </div>
                 <div class="w3-container w3-cell-top w3-left-align w3-padding-32 w3-black w3-cell w3-hide-small w3-third">
@@ -160,7 +160,7 @@
                         <a href="https://graphics.tu-bs.de/people/magnor">Marcus Magnor</a>
                     </p>
                     <p class="w3-large w3-left-align">
-                        Eurographics 2025
+                        Eurographics Conference (EG) 2025
                     </p>
                     <p class="w3-large w3-left-align w3-text-blue">
                         <a href="https://arxiv.org/abs/2406.10078">[paper]</a>&nbsp
@@ -236,18 +236,23 @@
                 <div class="w3-container w3-left-align w3-padding-32 w3-black w3-cell w3-mobile w3-half">
                     <h1 class="w3-text-green w3-xxlarge"> Positions</h1>
                     <ul class="w3-large">
-                        <li>February 2019 - present: <b>Research Scientist</b><br>
-                            Institute for Computer Graphics, TU Braunschweig, Germany
+                        <li>2019 - present: <b>PhD Student</b><br>
+                            <i class="w3-medium">Under the supervision of Prof. Dr.-Ing. Marcus Magnor</i><br>
+                            Computer Graphics Lab, TU Braunschweig, Germany
                         </li>
-                        <li>May 2016 - July 2016: <b>Student Research Assistant</b><br>
-                            Institute for Computer Graphics, TU Braunschweig, Germany
+                        <li>2019 - 2025: <b>Research Scientist</b><br>
+                            Computer Graphics Lab, TU Braunschweig, Germany
+                        </li>
+                        <li>2016: <b>Student Research Assistant</b><br>
+                            Computer Graphics Lab, TU Braunschweig, Germany
                         </li>
                     </ul>
                     <h1 class="w3-text-green w3-xxlarge"> Education</h1>
                     <ul class="w3-large">
-                        <li>February 2019 - present: <b>PhD Student</b><br>
+                        <li>Expected August 2025: <b>PhD (Dr.-Ing.) in Computer Science</b> (In Progress)<br>
                             <i class="w3-medium">Under the supervision of Prof. Dr.-Ing. Marcus Magnor</i><br>
-                            Institute for Computer Graphics, TU Braunschweig, Germany
+                            <i class="w3-medium">Thesis title: "Neural Reconstruction and Rendering of Dynamic Real-World Content from Monocular Video"</i><br>
+                            TU Braunschweig, Germany
                         </li>
                         <li>November 2018: <b>M.Sc. in Computer Science</b><br>
                             <i class="w3-medium">Master thesis: "Learning Optical Flow from Long-Exposure Images"</i><br>
@@ -265,9 +270,9 @@
                 </div>
                 <div class="w3-container w3-padding-32 w3-text-green w3-black w3-cell w3-mobile w3-half">
                     <h1 class="w3-xxlarge">Download detailed CV here: <a
-                        href="resources/CV_Kappel.pdf" download target="_blank"
+                        href="resources/CV_public.pdf" download target="_blank"
                         class="w3-hover-opacity"><i class="fa fa-file-pdf-o w3-xxlarge"></i></a></h1>
-                    <iframe class="w3-hide-small" src="resources/CV_Kappel.pdf" frameborder="0" style="width:65%;aspect-ratio:0.75;"></iframe>
+                    <iframe class="w3-hide-small" src="resources/CV_public.pdf" frameborder="0" style="width:40%;aspect-ratio:0.75;"></iframe>
                 </div>
             </div>
         </div>
@@ -280,7 +285,7 @@
                     <hr style="width:30%" class="w3-opacity">
                     <div class="w3-section w3-left-align" >
                         <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Braunschweig, Germany</p>
-                        <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +49 (0)531 391 2121</p>
+                        <!-- <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: XXXXXXXXX</p> -->
                         <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: kappel@cg.cs.tu-bs.de</p>
                     </div>
                     <br>
@@ -302,7 +307,7 @@
     <!-- Footer -->
     <footer class="w3-bar w3-bottom w3-center w3-black w3-padding-8 w3-opacity w3-hover-opacity-off w3-hide-small w3-text-grey", id="footer">
         <hr class="w3-center", style="width:60%;margin-left:auto;margin-right:auto;margin-top:0;margin-bottom:0;padding-top:0;">
-        <i> Copyright 2023 by Moritz Kappel. Powered by <a
+        <i> Copyright 2025 by Moritz Kappel. Powered by <a
             href="https://www.w3schools.com/w3css/default.asp" target="_blank"
             class="w3-hover-text-green">w3.css</a>.</i>
     </footer>
