added monerf video

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                     </p>
                     <p class="w3-large w3-left-align w3-text-blue">
                         <a href="https://arxiv.org/abs/2212.01368">[paper]</a>&nbsp
+                        <a href="https://www.youtube.com/watch?v=1L73suob3bU">[video]</a>&nbsp
                         <a href="https://graphics.tu-bs.de/publications/kappel2024fast">[project page]</a>&nbsp
                         <a href="https://github.com/MoritzKappel/MoNeRF">[code]</a>&nbsp
                         <a href="https://nextcloud.mpi-klsb.mpg.de/index.php/s/EHtctQJZDWWcfqj">[data]</a>
